// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text snapshots bold 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<span
  className="c0"
  size="medium"
>
  some text
</span>
`;

exports[`Text snapshots normal 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<span
  className="c0"
  size="medium"
>
  some text
</span>
`;

exports[`Text snapshots with color 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #27AE60;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<span
  className="c0"
  color="success"
  size="medium"
>
  some text
</span>
`;
